# Araneid

./: .gitignore  Dockerfile  README.rst  pyproject.toml  requirements.txt  setup.py  xmake.lua
araneid/: __init__.py  __main__.py  annotation.py  crawler.py  item.py  runner.py  scraper.py  setting.py  state.py  stats.py
araneid/core/: __init__.py  context.py  crawler.py  downloader.py  downloadmanager.py  engine.py  exception.py  extension.py  flags.py  middleware.py  middlewaremanager.py  pipeline.py  plugin.py  request.py  response.py  schedulemanager.py  scheduler.py  signal.py  slot.py  slotmanager.py  stream.py
araneid/data/: item.py  pipeline.py
araneid/downloader/: aiohttp.py  aiosocket.py  aiowebsocket.py
araneid/logger/: __init__.py
araneid/network/: __init__.py  http.py  socket.py  websocket.py
araneid/runners/: __init__.py  cli.py  crawler.py
araneid/scheduler/: default.py
araneid/scripts/: __init__.py  araneid.py  crawl.py  parse.py  run.py  start.py  status.py  test.py
araneid/settings/: __init__.py
araneid/spider/: __init__.py  parser.py  route.py  routermanager.py  rule.py  spider.py  starter.py  statsmanager.py
araneid/tools/: __init__.py
araneid/util/: __init__.py  _async.py  _events.py  _import.py  annotation.py  cli.py  cls.py  compat.py  debug.py  dict.py  filter.py  gen.py  iter.py  linkedlist.py  lock.py  platform.py  selector.py  sys.py
tests/: asyncio_test.py  conftest.py  data_test.py  engine_test.py  idle_flags_test.py  runner_test.py  slot_test.py  stats_test.py  stream_test.py
tests/perf/: __init__.py  conftest.py  (+4 more)
(+58 files in other folders)
